feat(builder): add context_menu

--- a/src/builder/builder.html
+++ b/src/builder/builder.html
@@ -1,5 +1,7 @@
 <template>
   
+  <compose view="./context_menu/component_menu/component.menu.html"></compose>
+  
   <div style="background: rgba(0,0,0,0.8);color:#fff;padding:">
     <ul>
       <li style="cursor:pointer;" click.delegate="back()">
