feat(builder): implement properties prompt and new logger service

--- a/src/builder/builder.html
+++ b/src/builder/builder.html
@@ -1,6 +1,6 @@
 <template>
   
-  <compose view="./context_menu/component_menu/component.menu.html"></compose>
+  <compose view="./context_menu/component_menu/component.menu.html" view-model="./context_menu/component_menu/component.menu.js"></compose>
   
   <div style="background: rgba(0,0,0,0.8);color:#fff;padding:">
     <ul>
