--- a/src/builder/context_menu/component_menu/component.menu.html
+++ b/src/builder/context_menu/component_menu/component.menu.html
@@ -2,7 +2,7 @@
 
   <div class="context_menu component">
     <ul>
-      <li>
+      <li click.delegate="open('properties')">
         properties
       </li>
       <li>
