fix(builder): move delete functionality from component to context_menu

--- a/src/builder/context_menu/component_menu/component.menu.html
+++ b/src/builder/context_menu/component_menu/component.menu.html
@@ -5,7 +5,7 @@
       <li click.delegate="open('properties')">
         properties
       </li>
-      <li>
+      <li click.delegate="removeElement()">
         delete
       </li>
     </ul>
