--- a/src/builder/builder.html
+++ b/src/builder/builder.html
@@ -23,7 +23,7 @@
           <div show.bind="tool.active">
             
             <ul>
-              <li id="draggable_${item._id}" class="${tool.display === 'components' ? 'draggable_comp_create' : ''} tool_item" repeat.for="item of tool.items">
+              <li id="draggable_${item._id}" class="${tool.display === 'components' ? 'draggable_comp_create' : ''} tool_item ${item.selected ? 'selected' : ''}" repeat.for="item of tool.items">
                 ${item.text}
               </li>
             </ul>
