feat(properties): add margin

--- a/src/builder/prompts/properties/properties.html
+++ b/src/builder/prompts/properties/properties.html
@@ -59,8 +59,14 @@
 
           <div class="prop">
             <label>margin</label>
-            <input type="number" value.bind="margin" min="0" />
-            <label>px</label>
+            <input type="number" value.bind="marginTop" class="small" min="0" />
+            <label class="small">px</label>
+            <input type="number" value.bind="marginRight" class="small" min="0" />
+            <label class="small">px</label>
+            <input type="number" value.bind="marginBottom" class="small" min="0" />
+            <label class="small">px</label>
+            <input type="number" value.bind="marginLeft" class="small" min="0" />
+            <label class="small">px</label>
           </div>
         </div>
 
