fix(properties): add new margin properties on saving content

--- a/src/builder/prompts/properties/properties.html
+++ b/src/builder/prompts/properties/properties.html
@@ -136,7 +136,7 @@
             <label>padding:</label>${paddingTop + 'px ' + paddingRight + 'px ' + paddingBottom + 'px ' + paddingLeft + 'px'}
           </div>
           <div>
-            <label>margin:</label>${margin + 'px'}
+            <label>margin:</label>${marginTop + 'px ' + marginRight + 'px ' + marginBottom + 'px ' + marginLeft + 'px'}
           </div>
           
           <div>
