--- a/src/builder/builder.html
+++ b/src/builder/builder.html
@@ -32,6 +32,13 @@
         </li>
       </ul>
       
+      <div class="drag-box">
+        <div class="box-border top-border box-side-width"></div>
+        <div class="box-border right-border box-side-height"></div>
+        <div class="box-border bottom-border box-side-width"></div>
+        <div class="box-border left-border box-side-height"></div>
+      </div>
+      
     </div>
   
     <div class="content">
