feat(builder): playing with color selector

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <script type="text/javascript" src="vendor/croppie/croppie.min.js"></script>
   <script type="text/javascript" src="jspm_packages/github/travist/jsencrypt@2.3.0/bin/jsencrypt.js"></script>
   <script type="text/javascript" src="jspm_packages/github/Stuk/jszip@3.0.0/dist/jszip.js"></script>
+  <script type="text/javascript" src="jscolor.js"></script>
   <!-- Use import instead -->
 
   <script>
