--- a/src/builder/prompts/properties/properties.html
+++ b/src/builder/prompts/properties/properties.html
@@ -75,6 +75,8 @@
           <div class="prop">
             <label class="prop">color (rgb)</label>
             <input type="text" value.bind="backgroundColor" />
+            
+            <input class="jscolor" value="ab2567" />
           </div>
 
           <h6>Preview</h6>
